k8s/apps/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eduai-backend
  namespace: eduai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eduai-backend
  template:
    metadata:
      labels:
        app: eduai-backend
    spec:
      containers:
        - name: backend
          image: vercchy/eduai-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
