k8s/apps/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eduai-frontend
  namespace: eduai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eduai-frontend
  template:
    metadata:
      labels:
        app: eduai-frontend
    spec:
      containers:
        - name: frontend
          image: vercchy/eduai-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
