k8s/apps/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eduai-db
  namespace: eduai
spec:
  serviceName: "eduai-db"
  replicas: 3
  selector:
    matchLabels:
      app: eduai-db
  template:
    metadata:
      labels:
        app: eduai-db
    spec:
      containers:
        - name: postgres
          image: bitnamilegacy/postgresql:16
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
