k8s/apps/postgres-read-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-read
  namespace: eduai
spec:
  selector:
    app: eduai-db
  ports:
    - port: 5432
      targetPort: 5432
