k8s/apps/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eduai-db
  namespace: eduai
spec:
  clusterIP: None
  selector:
    app: eduai-db
  ports:
    - port: 5432
      targetPort: 5432
