k8s/apps/postgres-write-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-write
  namespace: eduai
spec:
  selector:
    statefulset.kubernetes.io/pod-name: eduai-db-0
  ports:
    - port: 5432
      targetPort: 5432
