k8s/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eduai-ingress
  namespace: eduai
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eduai-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eduai-frontend
                port:
                  number: 80
